--- a/src/app/pages/map/event-form/event-form.component.html
+++ b/src/app/pages/map/event-form/event-form.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="browser">
 <agm-map [latitude]="lat" [longitude]="lng" [usePanning]='true' [zoom]="zoom" [fullscreenControl]="true" [mapTypeControl]="true" [keyboardShortcuts]="false" (mapClick)="placeClick($event)">
   <ng-container *ngFor="let m of markers">
-    <agm-marker [hidden]="!m.icon" (markerClick)="clickedMarker(m.label)" [latitude]="m.lat" [longitude]="m.lng" [label]="m.labelOptions" [inlineSVG]="m.customInfo" [onSVGLoaded]="handleSVG" (onSVGInserted)="onSvgInserted($event,m,i)" [iconUrl]="m.icon">
+    <agm-marker (markerClick)="clickedMarker(m.label)" [latitude]="m.lat" [longitude]="m.lng" [label]="m.labelOptions" [inlineSVG]="m.customInfo" [onSVGLoaded]="handleSVG" (onSVGInserted)="onSvgInserted($event,m,i)" [iconUrl]="m.icon">
     </agm-marker>
   </ng-container>
 </agm-map>
