--- a/src/app/pages/map/events/events.component.html
+++ b/src/app/pages/map/events/events.component.html
@@ -27,7 +27,7 @@
           </section>
           <aside class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
           <!-- Filter Form -->
-          <app-filter-form [inputEvents]="events"></app-filter-form>
+          <app-filter-form [inputType]="'map'"></app-filter-form>
           </aside>
         </div>
       </div>
