--- a/src/app/templates/forms/service-form/service-form.component.html
+++ b/src/app/templates/forms/service-form/service-form.component.html
@@ -141,7 +141,7 @@
     </div>
     <div class="col-sm-12">
       <div class="form-group text-center">
-        <event-form-map></event-form-map>
+        <single-event-map></single-event-map>
       </div>
     </div>
     <!-- Maps Button with class -->
